# meetup-mcp-duck

./: README.md  duck.ipynb  pyproject.toml
src/: app.py  settings.py
