[project]
name = "meetup-mcp-duck"
version = "0.1.0"
description = "Machine Learning May, 2025 Meetup"
author = "Bryan Corder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit[litellm]>=2.5.5",
    "duckdb>=1.2.2",
    "openai>=1.79.0",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
